setup/samples/manifests/net/net-pod.yaml
### test pod:
apiVersion: v1
kind: Pod
metadata:
  name: net-pod
  #annotations:
  #  k8s.v1.cni.cncf.io/networks: macvlan
spec:
  containers:
  - name: net-pod
    # command: ["/bin/ash", "-c", "trap : TERM INT; sleep infinity & wait"]
    image: praqma/network-multitool:extra
