setup/samples/manifests/net/net-svc.yaml
# hello-kubernetes-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: net
spec:
  type: NodePort
  ports:
  - port: 80
    #targetPort: 80
    nodePort: 32131
    name: http
  selector:
    app: net
