setup/samples/manifests/net/net-ing-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: net
spec:
  ingressClassName: nginx
  rules:
  - host: net.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        # pathType: ImplementationSpecific
        backend:
          service:
            name: net
            port:
              #name: http
              number: 80
